--- a/scss/util/_keys.scss
+++ b/scss/util/_keys.scss
@@ -7,3 +7,14 @@
         opacity: 1;
     }
 }
+
+@keyframes carouselSlide {
+    0% {
+        pointer-events: none;
+        opacity: 0;
+    }
+    100% {
+        pointer-events: auto;
+        opacity: 1;
+    }
+}
