--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,16 @@
     opacity: 1;
   }
 }
+@keyframes carouselSlide {
+  0% {
+    pointer-events: none;
+    opacity: 0;
+  }
+  100% {
+    pointer-events: auto;
+    opacity: 1;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +31,6 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background: #e6ebec;
   color: #5C666F;
   display: flex;
   flex-direction: row;
@@ -34,6 +43,8 @@ body {
   width: 100%;
   max-width: 475px;
   margin: 0 auto;
+  background: #eff0f3;
+  min-height: 100vh;
 }
 
 * li {
@@ -44,11 +55,11 @@ body {
   outline: none;
 }
 
-.temp-font {
+.auto-order-container .temp-font {
   font-size: 0.8em;
 }
 
-.loader {
+.auto-order-container .loader {
   filter: grayscale(0.7) hue-rotate(20deg);
   display: block;
   margin: 0 auto;
@@ -57,21 +68,56 @@ body {
   opacity: 0.8;
 }
 
-.page-loader {
+.ao-overlay-container .page-loader {
   width: 75px;
   filter: grayscale(0.7) hue-rotate(20deg);
 }
 
-.disabled {
+.auto-order-container .disabled {
   pointer-events: none;
   opacity: 0.6;
 }
 
-.bolder {
+.btn-link {
+  padding: 5px 15px;
+  outline: none;
+  text-decoration: none;
+  display: block;
+  border: 1px solid;
+  text-align: center;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.btn-link.round1 {
+  border-radius: 5px;
+}
+.btn-link.round2 {
+  border-radius: 25px;
+}
+.btn-link.default {
+  background: white;
+  border-color: #5C666F;
+  color: #5C666F;
+  font-weight: 600;
+}
+.btn-link.default:hover {
+  background: #5C666F;
+  color: white;
+}
+.btn-link.default.cta {
+  background: #5C666F;
+  border-color: #5C666F;
+  color: white;
+}
+.btn-link.default.cta:hover {
+  background: #505961;
+}
+
+.auto-order-container .bolder {
   font-weight: 600;
 }
 
-button {
+.auto-order-container button {
   border-radius: 25px;
   border: 1px solid #5C666F;
   color: #5C666F;
@@ -80,7 +126,7 @@ button {
   transition: 0.3s;
   background: white;
 }
-button:hover {
+.auto-order-container button:hover {
   background: #5C666F;
   color: white;
 }
@@ -155,17 +201,17 @@ button:hover {
 }
 
 /* marketing banner container */
-.marketing-banner {
+.auto-order-container .marketing-banner {
   height: auto;
   width: 100%;
 }
-.marketing-banner .carousel-container {
+.auto-order-container .marketing-banner .carousel-container {
   height: 120px;
   width: 100%;
   position: relative;
   background: white;
 }
-.marketing-banner .carousel-container .controls {
+.auto-order-container .marketing-banner .carousel-container .controls {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -179,7 +225,7 @@ button:hover {
   align-items: center;
   padding: 10px;
 }
-.marketing-banner .carousel-container .controls p {
+.auto-order-container .marketing-banner .carousel-container .controls p {
   padding: 10px;
   border-radius: 5px;
   color: #5C666F;
@@ -187,13 +233,17 @@ button:hover {
   opacity: 0.8;
   cursor: pointer;
   font-size: 1.2em;
+  z-index: 15;
 }
-.marketing-banner .carousel-container .controls p:hover {
-  background: rgba(57, 64, 69, 0.5);
+.auto-order-container .marketing-banner .carousel-container .controls p i {
+  pointer-events: none;
+}
+.auto-order-container .marketing-banner .carousel-container .controls p:hover {
+  background: rgba(57, 64, 69, 0.2);
   color: white;
   opacity: 1;
 }
-.marketing-banner .carousel-content {
+.auto-order-container .marketing-banner .carousel-content {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -201,9 +251,57 @@ button:hover {
   align-items: center;
   height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item {
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  background: #e5edf3;
+  padding: 10px;
+  margin-left: 0px;
+  transition: 0.6s;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item:nth-child(even) {
+  background: #ece2ea;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item:nth-child(even) button {
+  background: rgba(111, 120, 150, 0.7);
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item.col {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item.hidden-carousel-item {
+  margin-left: -100%;
+  opacity: 0;
+  pointer-events: none;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item p {
+  width: 200px;
+  font-size: 0.8em;
+  text-align: center;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item button {
+  background: rgba(111, 120, 150, 0.7);
+  border: none;
+  z-index: 15;
+}
+.auto-order-container .marketing-banner .carousel-content .carousel-item button:hover {
+  background: #6f7896;
 }
 
-.user-dashboard {
+.auto-order-container .user-dashboard {
   padding: 20px;
   background: #656d7a;
   background-image: linear-gradient(rgba(77, 131, 175, 0.493), rgba(123, 123, 156, 0.596)), url(../assets/dash-walls/wall1.jpg);
@@ -211,7 +309,7 @@ button:hover {
   background-repeat: no-repeat;
 }
 
-.user-info-container {
+.auto-order-container .user-info-container {
   color: white;
   display: flex;
   flex-direction: row;
@@ -219,7 +317,7 @@ button:hover {
   justify-content: space-between;
   align-items: center;
 }
-.user-info-container .user-picture-and-name {
+.auto-order-container .user-info-container .user-picture-and-name {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -228,20 +326,20 @@ button:hover {
   width: 100%;
   max-width: 200px;
 }
-.user-info-container .user-picture-and-name img {
+.auto-order-container .user-info-container .user-picture-and-name img {
   width: 50px;
   margin-right: 10px;
 }
-.user-info-container .user-picture-and-name .name {
+.auto-order-container .user-info-container .user-picture-and-name .name {
   font-weight: 700;
   font-size: 1.1em;
   letter-spacing: 1px;
 }
-.user-info-container .user-id {
+.auto-order-container .user-info-container .user-id {
   font-size: 0.8em;
 }
 
-.ao-select-container {
+.auto-order-container .ao-select-container {
   margin: 5px auto 0px;
   display: flex;
   flex-direction: column;
@@ -249,7 +347,7 @@ button:hover {
   justify-content: flex-end;
   align-items: flex-end;
 }
-.ao-select-container .auto-order-count {
+.auto-order-container .ao-select-container .auto-order-count {
   color: white;
   font-size: 0.8em;
   display: flex;
@@ -258,7 +356,7 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
-.ao-select-container .auto-order-count .count {
+.auto-order-container .ao-select-container .auto-order-count .count {
   background: #6f7896;
   background: #596079;
   height: 30px;
@@ -272,7 +370,7 @@ button:hover {
   border-radius: 50%;
   font-size: 1.1em;
 }
-.ao-select-container .custom-select-container {
+.auto-order-container .ao-select-container .custom-select-container {
   background: white;
   height: 40px;
   width: 100%;
@@ -288,18 +386,18 @@ button:hover {
   cursor: pointer;
   transition: 0.3s;
 }
-.ao-select-container .custom-select-container .viewing-order {
+.auto-order-container .ao-select-container .custom-select-container .viewing-order {
   color: #6f7896;
   opacity: 0.6;
   margin-right: 10px;
 }
-.ao-select-container .custom-select-container .select-arrow {
+.auto-order-container .ao-select-container .custom-select-container .select-arrow {
   transition: 0.3s;
 }
-.ao-select-container .custom-select-container .select-arrow.active {
+.auto-order-container .ao-select-container .custom-select-container .select-arrow.active {
   transform: rotate(-180deg);
 }
-.ao-select-container .custom-select-container .menu-box {
+.auto-order-container .ao-select-container .custom-select-container .menu-box {
   position: absolute;
   width: 100%;
   background: white;
@@ -313,12 +411,12 @@ button:hover {
   border-radius: 3px;
   z-index: 10;
 }
-.ao-select-container .custom-select-container .menu-box.active {
+.auto-order-container .ao-select-container .custom-select-container .menu-box.active {
   pointer-events: auto;
   opacity: 1;
   top: 42px;
 }
-.ao-select-container .custom-select-container li {
+.auto-order-container .ao-select-container .custom-select-container li {
   padding: 5px 10px;
   border-radius: 3px;
   transition: 0.3s;
@@ -329,7 +427,7 @@ button:hover {
   justify-content: space-between;
   align-items: center;
 }
-.ao-select-container .custom-select-container li .product-count {
+.auto-order-container .ao-select-container .custom-select-container li .product-count {
   display: block;
   height: 25px;
   width: 25px;
@@ -344,7 +442,7 @@ button:hover {
   transition: 0.3s;
   font-size: 0.8em;
 }
-.ao-select-container .custom-select-container li.create-new {
+.auto-order-container .ao-select-container .custom-select-container li.create-new {
   text-align: center;
   padding: 10px;
   background: #7e86a1;
@@ -353,17 +451,17 @@ button:hover {
   margin: 10px auto 0 auto;
   border-radius: 25px;
 }
-.ao-select-container .custom-select-container li.create-new:hover {
+.auto-order-container .ao-select-container .custom-select-container li.create-new:hover {
   background: #6f7896;
 }
-.ao-select-container .custom-select-container li.create-new p {
+.auto-order-container .ao-select-container .custom-select-container li.create-new p {
   text-align: center;
   width: 100%;
 }
-.ao-select-container .custom-select-container li:hover {
+.auto-order-container .ao-select-container .custom-select-container li:hover {
   background: #f1f1f1;
 }
-.ao-select-container .custom-select-container li:hover .product-count {
+.auto-order-container .ao-select-container .custom-select-container li:hover .product-count {
   background: #6f7896;
 }
 
@@ -388,7 +486,7 @@ button:hover {
   width: 75px;
 }
 
-.product-card {
+.auto-order-container .product-card {
   height: 100px;
   width: 100%;
   background: white;
@@ -407,23 +505,23 @@ button:hover {
   opacity: 0;
   overflow: hidden;
 }
-.product-card:hover {
+.auto-order-container .product-card:hover {
   transform: scale(1.02);
 }
-.product-card .outofstock-icon {
+.auto-order-container .product-card .outofstock-icon {
   color: #FF9E15;
   font-size: 1em;
   margin-left: 5px;
 }
-.product-card.outofstock-card {
+.auto-order-container .product-card.outofstock-card {
   border-color: rgba(255, 158, 21, 0.5);
 }
-.product-card .card-child {
+.auto-order-container .product-card .card-child {
   height: 100%;
   width: 100%;
   font-size: 0.9em;
 }
-.product-card .img-container {
+.auto-order-container .product-card .img-container {
   max-width: 100px;
   min-width: 100px;
   display: flex;
@@ -433,11 +531,11 @@ button:hover {
   align-items: center;
   padding: 5px;
 }
-.product-card .img-container img {
+.auto-order-container .product-card .img-container img {
   display: inline;
   height: 100%;
 }
-.product-card .name-and-qty {
+.auto-order-container .product-card .name-and-qty {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -447,18 +545,18 @@ button:hover {
   font-size: 0.7em;
   color: #3b3f44;
 }
-.product-card .name-and-qty .product-name-copy {
+.auto-order-container .product-card .name-and-qty .product-name-copy {
   font-size: 1.4em;
   font-weight: 400;
 }
-.product-card .name-and-qty .qty-copy {
+.auto-order-container .product-card .name-and-qty .qty-copy {
   font-size: 1.2em;
 }
-.product-card .name-and-qty .qty-amount {
+.auto-order-container .product-card .name-and-qty .qty-amount {
   font-weight: 400;
   font-size: 1.2em;
 }
-.product-card .price {
+.auto-order-container .product-card .price {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -469,26 +567,26 @@ button:hover {
   min-width: 50px;
   color: rgba(61, 64, 68, 0.945);
 }
-.product-card .price .price-copy {
+.auto-order-container .product-card .price .price-copy {
   font-size: 1.2em;
   font-weight: 600;
   padding-right: 5px;
 }
-.product-card .price .outofstock-copy {
+.auto-order-container .product-card .price .outofstock-copy {
   color: #FF9E15;
   position: absolute;
   bottom: 10px;
   right: 15px;
 }
 
-.auto-order-settings {
+.auto-order-container .auto-order-settings {
   padding: 25px 20px;
   transition: 0.3s;
 }
-.auto-order-settings.margin-space {
+.auto-order-container .auto-order-settings.margin-space {
   margin-bottom: 400px;
 }
-.auto-order-settings .header {
+.auto-order-container .auto-order-settings .header {
   margin-bottom: 25px;
   display: flex;
   flex-direction: row;
@@ -497,30 +595,30 @@ button:hover {
   align-items: center;
   cursor: pointer;
 }
-.auto-order-settings .header i {
+.auto-order-container .auto-order-settings .header i {
   margin-right: 15px;
   transition: 0.3s;
 }
-.auto-order-settings .header i.active {
+.auto-order-container .auto-order-settings .header i.active {
   transform: rotate(-180deg);
 }
-.auto-order-settings .header h4 {
+.auto-order-container .auto-order-settings .header h4 {
   color: black;
   font-weight: 400;
   font-size: 1.1em;
 }
 
-.ao-settings-card-container {
+.auto-order-container .ao-settings-card-container {
   border-radius: 5px;
   overflow: hidden;
   transition: margin 0.4s, opacity 0.3s;
 }
-.ao-settings-card-container.hide {
+.auto-order-container .ao-settings-card-container.hide {
   margin-top: -20px;
   opacity: 0;
   pointer-events: none;
 }
-.ao-settings-card-container .card {
+.auto-order-container .ao-settings-card-container .card {
   height: 100px;
   width: 100%;
   background: white;
@@ -532,11 +630,11 @@ button:hover {
   align-items: center;
   padding: 15px;
 }
-.ao-settings-card-container .card:nth-child(even) {
+.auto-order-container .ao-settings-card-container .card:nth-child(even) {
   border-bottom: 1px solid rgba(92, 102, 111, 0.2);
   border-top: 1px solid rgba(92, 102, 111, 0.2);
 }
-.ao-settings-card-container .card .group {
+.auto-order-container .ao-settings-card-container .card .group {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -544,23 +642,23 @@ button:hover {
   align-items: flex-start;
   height: 100%;
 }
-.ao-settings-card-container .card .group.half {
+.auto-order-container .ao-settings-card-container .card .group.half {
   height: 50%;
 }
-.ao-settings-card-container .card .group p {
+.auto-order-container .ao-settings-card-container .card .group p {
   margin-top: 10px;
   font-size: 0.8em;
   color: gray;
 }
-.ao-settings-card-container .card.shrink {
+.auto-order-container .ao-settings-card-container .card.shrink {
   height: 0;
 }
-.ao-settings-card-container .card button {
+.auto-order-container .ao-settings-card-container .card button {
   height: 35px;
   width: 75px;
 }
 
-.auto-order-settings .coupon-btn {
+.auto-order-container .auto-order-settings .coupon-btn {
   background: transparent;
   text-decoration: underline;
   border: none;
@@ -569,10 +667,10 @@ button:hover {
   outline: none;
   font-weight: 400;
 }
-.auto-order-settings .coupon-btn:hover {
+.auto-order-container .auto-order-settings .coupon-btn:hover {
   color: black;
 }
-.auto-order-settings .coupon-input-container {
+.auto-order-container .auto-order-settings .coupon-input-container {
   margin: 15px auto 50px;
   margin-top: -10px;
   opacity: 0;
@@ -585,12 +683,12 @@ button:hover {
   justify-content: space-between;
   align-items: center;
 }
-.auto-order-settings .coupon-input-container.active {
+.auto-order-container .auto-order-settings .coupon-input-container.active {
   opacity: 1;
   pointer-events: auto;
   margin-top: 15px;
 }
-.auto-order-settings .coupon-input-container input {
+.auto-order-container .auto-order-settings .coupon-input-container input {
   padding: 9px 15px;
   border-radius: 0;
   border-top-left-radius: 25px;
@@ -599,7 +697,7 @@ button:hover {
   outline: none;
   width: 100%;
 }
-.auto-order-settings .coupon-input-container button {
+.auto-order-container .auto-order-settings .coupon-input-container button {
   margin: auto 15px auto 0;
   padding: 7px 15px;
   height: 35px;
@@ -615,7 +713,7 @@ button:hover {
   font-weight: 400;
   letter-spacing: 1px;
 }
-.auto-order-settings .coupon-input-container button:hover {
+.auto-order-container .auto-order-settings .coupon-input-container button:hover {
   background-color: #7e86a1;
 }
 
