--- a/scss/util/_variables.scss
+++ b/scss/util/_variables.scss
@@ -30,6 +30,10 @@ $main-color-accent: rgb(111, 120, 150);
 $loader-color: grayscale(.7) hue-rotate(20deg);
 
 
+$main-color: #165E79;
+$main-color-accent: #165E79;
+$loader-color: grayscale(.6) hue-rotate(360deg);
+
 
 
 
