--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,7 +14,7 @@ body {
     color: $font-color;
 
     // temporary
-    @include flex(row, nowrap, center, center);
+    @include flex(row, nowrap, flex-start, flex-start);
 }
 
 .auto-order-container {
@@ -23,4 +23,5 @@ body {
     margin: 0 auto;
     background: rgb(239, 240, 243);
     min-height: 100vh;
+    transform: scale(.9);
 }
