--- a/scss/components/current-order/_current-order.scss
+++ b/scss/components/current-order/_current-order.scss
@@ -57,7 +57,7 @@
         }
     }
     & .name-and-qty {
-        @include flex(column, nowrap, space-between, flex-start);
+        @include flex(column, nowrap, space-around, flex-start);
         padding: 10px;
         font-size: .7em;
         color: rgb(59, 63, 68);
@@ -84,6 +84,7 @@
         font-size: 1.2em;
         font-weight: 600;
         padding-right: 5px;
+        margin-top: 10px;
     }
     & .outofstock-copy {
         color: $happiness-orange;
