--- a/scss/components/dashboard/_dashboard.scss
+++ b/scss/components/dashboard/_dashboard.scss
@@ -1,7 +1,8 @@
 .auto-order-container .user-dashboard {
     padding: 20px;
     background: $main-color;
-    background-image: linear-gradient(rgba(77, 131, 175, 0.493), rgba(123, 123, 156, 0.596)), url(../assets/dash-walls/wall1.jpg);
+    // background-image: linear-gradient(rgba(77, 131, 175, 0.493), rgba(123, 123, 156, 0.596)), url(../assets/dash-walls/wall1.jpg);
+
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -26,7 +27,9 @@
         }
         // user id
         & .user-id {
-            font-size: .8em;
+            font-size: .9em;
+            margin-right: 35px;
+            opacity: .8;
         }
 }
 
@@ -35,17 +38,18 @@
     margin: 5px auto 0px;
     @include flex(column, nowrap, flex-end, flex-end);
         & .auto-order-count {
-            color: white;
-            font-size: .8em;
+           color: white;
+            font-size: .9em;
             @include flex(row, nowrap, center, center);
                 & .count {
+                    
+                    color: $ash-gray;
                     background: $main-color-accent;
-                    background: darken($main-color-accent, 10%);
+                    background: white;
                     @include simpleSize(30px);
                     margin: 10px auto 5px 10px;
                     @include flex(row, nowrap, center, center);
                     border-radius: 50%;
-                    font-size: 1.1em;
                 }
         }
         & .custom-select-container {
@@ -58,7 +62,7 @@
             border-radius: 3px;
             cursor: pointer;
             transition: $t3;
-                & .order-item p {
+                & .order-item p, & .order-item i{
                     pointer-events: none;
                 }
                 & .viewing-order {
