--- a/css/styles.css
+++ b/css/styles.css
@@ -358,11 +358,12 @@ body {
   align-items: center;
 }
 .auto-order-container .ao-select-container .auto-order-count .count {
+  font-size: 0.9em;
   color: #5C666F;
   background: #165E79;
   background: white;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   margin: 10px auto 5px 10px;
   display: flex;
   flex-direction: row;
@@ -421,7 +422,7 @@ body {
   top: 42px;
 }
 .auto-order-container .ao-select-container .custom-select-container li {
-  padding: 5px 10px;
+  padding: 10px;
   border-radius: 3px;
   transition: 0.3s;
   font-size: 0.9em;
@@ -430,6 +431,7 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #dbdbdb;
 }
 .auto-order-container .ao-select-container .custom-select-container li .product-count {
   display: block;
@@ -449,14 +451,15 @@ body {
 .auto-order-container .ao-select-container .custom-select-container li.create-new {
   text-align: center;
   padding: 10px;
-  background: #1a6f8f;
+  background: #FF9E15;
   width: 100%;
   color: white;
   margin: 10px auto 0 auto;
   border-radius: 25px;
+  border: none;
 }
 .auto-order-container .ao-select-container .custom-select-container li.create-new:hover {
-  background: #165E79;
+  background: #ffa92f;
 }
 .auto-order-container .ao-select-container .custom-select-container li.create-new p {
   text-align: center;
