--- a/scss/components/order-settings/_order-settings.scss
+++ b/scss/components/order-settings/_order-settings.scss
@@ -1,4 +1,5 @@
 .auto-order-container .auto-order-settings {
+    margin-top: 12px;
     padding: 25px 20px;
     transition: $t3;
         &.margin-space {
