--- a/scss/components/sub-banner/_sub-banner.scss
+++ b/scss/components/sub-banner/_sub-banner.scss
@@ -1,12 +1,27 @@
 .sub-banner-content {
-    padding: $default-padding;
     text-align: center;
     font-size: .7em;
     @include flex(row, nowrap, center, center);
-    height: 40px;
+    margin: 15px auto;
+    width: 92%;
     background: white;
+    border: none;
+    border-left: 3px solid $neora-blue;
+    border-radius: 5px;
+    position: relative;
+        & h3 {
+            padding: 12px 60px;
+        }
         & .emph  {
-            color: $main-color;
+            color: $neora-blue;
             text-transform: uppercase;
+            margin: auto 5px;
+        }
+        & i {
+            color: $neora-blue;
+            margin-right: 25px;
+            font-size: 1.4em;
+            @include absoluteCenter;
+            left:25px;
         }
 }
