--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,1 +1,1 @@
-@import 'marketing/index', 'dashboard/index', 'sub-banner/sub-banner', 'out-of-stock-alert/out-of-stock-alert', 'section-split/index', 'current-order/index', 'order-settings', 'price-footer';
+@import 'marketing/index', 'dashboard/index', 'sub-banner/sub-banner', 'section-split/index', 'current-order/index', 'order-settings', 'price-footer';
