--- a/scss/components/current-order/_current-order.scss
+++ b/scss/components/current-order/_current-order.scss
@@ -63,7 +63,7 @@
         color: rgb(59, 63, 68);
     & .product-name-copy {
         font-size: 1.4em;
-        font-weight: 400;
+        font-weight: 600;
 
     }
     & .qty-copy {
@@ -87,11 +87,11 @@
         margin-top: 10px;
     }
     & .outofstock-copy {
-        color: lighten($happiness-orange, 15%);
+        color: lighten($happiness-orange, 5%);
         position: absolute;
         bottom: 10px;
         right: 15px;
-        font-size: .9em;
+        font-size: 1em;
     }
 }
 }
