--- a/scss/components/dashboard/_dashboard.scss
+++ b/scss/components/dashboard/_dashboard.scss
@@ -2,9 +2,8 @@
     padding: 20px;
     background: $main-color;
     // background-image: linear-gradient(rgba(77, 131, 175, 0.493), rgba(123, 123, 156, 0.596)), url(../assets/dash-walls/wall1.jpg);
-
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-image: linear-gradient(to right, $main-color, #167597);
+    
 }
 
 .auto-order-container .user-info-container {
@@ -53,6 +52,7 @@
                     margin: 10px auto 5px 10px;
                     @include flex(row, nowrap, center, center);
                     border-radius: 50%;
+                    font-weight: 600;
                 }
         }
         & .custom-select-container {
@@ -149,3 +149,37 @@
 }
 
 
+@media (min-width: 875px) {
+    .auto-order-container .user-dashboard {
+        @include flex(column, nowrap, flex-start, center);
+        & div {
+            margin: 0;
+            width: 100%;
+            max-width: 400px;
+            margin-right: auto;
+            &:first-child {
+                    & .user-id {
+                        text-align: right;
+                    }
+
+            }
+        }
+        
+    }
+}
+
+@media (min-width: 900px) {
+    .auto-order-container .user-dashboard {
+        background-image: linear-gradient(to right, $main-color,  #16759730), url(../assets/smartshop/smartshop.png);
+
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+    }
+}
+
+@media (min-width: 1024px) {
+    .auto-order-container .user-dashboard {
+        background-position: 85%;
+    }
+}
